# SkolkovoOrganiser

./: .gitattributes  .gitignore  README.md  SkolkovoOrganiser.spec  Updater.spec  admin_window.py  alembic.ini  api.py  auth_utils.py  build_release.py  client.py  create_first_admin.py  database.py  login_window.py  mentor_window.py  models.py  profile_utils.py  register_window.py  requirements.txt  schemas.py  setup.cfg  startup_template.docx  startup_window.py  token.txt  updater.py  validators.py  word_load.py  word_text.py
alembic/: env.py
alembic/versions/: 24e0d5a3803a_initial.py
templates/: form.html
