[metadata]
name = skolkovo-organiser
version = 0.1.0
author = Dmitrii Lin
author_email = dima@webdialect.com
description = Учебный проект (клиенты, менторы, администраторы) с Alembic, PostgreSQL и кэшированием
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.110.0
    uvicorn[standard]>=0.29.0
    SQLAlchemy>=2.0.28
    alembic>=1.13.1
    psycopg2-binary>=2.9.9
    python-multipart>=0.0.9
    jinja2>=3.1.3
    pydantic>=2.6.3
    requests>=2.31.0

[options.extras_require]
dev =
    black
    ruff
    mypy
    pytest
    pytest-asyncio
